DataBinding에서 Stringformat을 이용해 코드 축약

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DataBinding_EX</string>
-    <string name="likeCount">%d 개</string>
+    <string name="Count">%d 개</string>
+    <string name="TotCount">총합 : %d 개</string>
 </resources>
